# python-exiv2

./: .gitignore  .readthedocs.yaml  CHANGELOG.txt  INSTALL.rst  MANIFEST.in  README.rst  USAGE.rst  conanfile.py  conanfile_ex.py  pyproject.toml  setup.py
.github/workflows/: build-exiv2-wheels-prebuilt.yml  build-exiv2-wheels.yml  build-linux-27.yml  build-linux-28.yml  build-linux.yml  build-macos-27.yml  build-macos-28.yml  build-macos-arm-27.yml  build-macos-arm-28.yml  build-macos-arm.yml  build-macos.yml  build-manylinux.yml  build-wheels.yml  build-windows-27.yml  build-windows-28-precompiled.yml  build-windows-28.yml  build-windows.yml  fetch-exiv2.yml  test-interface.yml  test-windows-build.yml
examples/: README.rst  addmoddel.py  easyaccess.py  exifcomment.py  exifdata.py  exifprint.py  exifvalue.py  iptceasy.py  py_easyaccess.py  thumbnail.py  values.py  xmpsample.py
libexiv2_0.26/: config.ini
libexiv2_0.26/swig/: __init__.py  error_wrap.cxx  exif_wrap.cxx  image_wrap.cxx  iptc_wrap.cxx  properties.py  types_wrap.cxx  xmp_wrap.cxx
libexiv2_0.27.4/: config.ini
libexiv2_0.27.4/swig/: __init__.py  error_wrap.cxx  image_wrap.cxx  iptc_wrap.cxx  properties_wrap.cxx  types.py  types_wrap.cxx  xmp_wrap.cxx
src/: basicio.i  datasets.i  error.i  exif.i  image.i  iptc.i  metadatum.i  preamble.i  properties.i  tags.i  types.i  value.i  version.i  xmp.i
src/doc/: conf.py  index.rst  requirements.txt
src/interface/: __main__.py  _create_enum.py  basicio.i  datasets.i  easyaccess.i  error.i  exif.i  extras.py  image.i  iptc.i  metadatum.i  metadatum_pointer.hpp  preamble.i  preview.i  properties.i  tags.i  types.i  utilities.i  value.i  version.i  version_module.i  xmp.i
src/swig-0_27_0/: __init__.py  __main__.py  basicio.py  basicio_wrap.cxx  datasets.py  datasets_wrap.cxx  easyaccess_wrap.cxx  error.py  error_wrap.cxx  exif.py  exif_wrap.cxx  image_wrap.cxx  iptc.py  iptc_wrap.cxx  metadatum.py  metadatum_wrap.cxx  preview_wrap.cxx  properties_wrap.cxx  tags.py  tags_wrap.cxx  types.py  types_wrap.cxx  value_wrap.cxx  version_wrap.cxx  xmp_wrap.cxx
src/swig-0_27_3/: __init__.py  basicio_wrap.cxx  datasets.py  datasets_wrap.cxx  easyaccess.py  easyaccess_wrap.cxx  error_wrap.cxx  exif.py  exif_wrap.cxx  image.py  image_wrap.cxx  iptc.py  iptc_wrap.cxx  metadatum_wrap.cxx  preview.py  preview_wrap.cxx  properties.py  properties_wrap.cxx  tags_wrap.cxx  types_wrap.cxx  value.py  value_wrap.cxx  version_wrap.cxx  xmp.py  xmp_wrap.cxx
src/swig-0_27_4/: __init__.py  basicio_wrap.cxx  datasets_wrap.cxx  easyaccess_wrap.cxx  error_wrap.cxx  exif_wrap.cxx  image.py  image_wrap.cxx  iptc.py  iptc_wrap.cxx  metadatum_wrap.cxx  preview.py  preview_wrap.cxx  properties.py  properties_wrap.cxx  tags_wrap.cxx  types_wrap.cxx  value.py  value_wrap.cxx  version_wrap.cxx  xmp.py  xmp_wrap.cxx
src/swig-0_27_7/: __init__.py  _create_enum.py  basicio.py  (+33 more)
tests/: image_02.heic  test_basicio.py  test_buffers.py  test_data_read.py  test_datasets.py  test_easyaccess.py  test_error.py  test_exif.py  test_image.py  test_iptc.py  test_iterators.py  test_metadatum.py  test_preview.py  test_preview_manager.py  test_properties.py  test_ref_counts.py  test_tags.py  test_types.py  test_value.py  test_version.py  test_xmp.py
utils/: build_docs.py  build_swig.py  build_swig.sh  copy_libexiv2.py  exiv2_cfg.py  extract_enums.py  pre_build.py  tag_release.py  use_system_libexiv2.py
(+384 files in other folders)
