# python-exiv2 - Python interface to libexiv2
# http://github.com/jim-easterbrook/python-exiv2
# Copyright (C) 2023-26  Jim Easterbrook  jim@jim-easterbrook.me.uk
#
# This file is part of python-exiv2.
#
# python-exiv2 is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# python-exiv2 is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with python-exiv2.  If not, see <http://www.gnu.org/licenses/>.

[build-system]
requires = [
    "setuptools >= 59.6, < 61.0; python_version < '3.9'",
    "setuptools >= 77.0; python_version >= '3.9'",
    "toml; python_version < '3.9'"
]
build-backend = "setuptools.build_meta"

[project]
name = "exiv2"
description = "Python interface to libexiv2"
readme = "README.rst"
license = "GPL-3.0-or-later"
authors = [
    {name = "Jim Easterbrook", email = "jim@jim-easterbrook.me.uk"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jim-easterbrook/python-exiv2"
Changelog = "https://github.com/jim-easterbrook/python-exiv2/blob/main/CHANGELOG.txt"
Documentation = "https://python-exiv2.readthedocs.io/"

[tool.setuptools]
platforms = ["POSIX", "MacOS", "Windows"]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "exiv2.__version__"}
